Fix overflow in navbar and update formatting in join section

--- a/css/scss/_base.scss
+++ b/css/scss/_base.scss
@@ -34,6 +34,7 @@ h2 {
   font-size: 1em;
   letter-spacing: 2pt;
   text-align: center;
+  text-transform: uppercase;
   padding-top: 1em;
   padding-bottom: 0.5em;
   color: $primary;
