--- a/css/scss/utils/_breakpoints.scss
+++ b/css/scss/utils/_breakpoints.scss
@@ -1,5 +1,5 @@
 $desktop: 1300px;
 $laptop: 1080px;
-$tablet: 840px;
-$phablet: 680px;
+$tablet: 900px;
+$phablet: 760px;
 $mobile: 480px;
